# lib_pipe

./: LICENSE  README.md  light_file.bat
VS_pipe/: demo_create.sln  删除中间生成代码.bat  项目说明.txt
VS_pipe/Debug/: copy------------------.bat  demo_create.lib  lib_pipe.lib  main.lib
VS_pipe/demo_create/: demo_create.cpp  demo_create.vcxproj  demo_create.vcxproj.filters  stdafx.cpp
VS_pipe/lib_pipe/: ReadMe.txt  lib_pipe.cpp  pipe_helper.cpp  pipe_interface.cpp
VS_pipe/main/: ReadMe.txt  main.cpp  stdafx.cpp
cmake_pipe/: CMakeLists.txt  light_file.bat
cmake_pipe/example/: main.cpp
cmake_pipe/include/pipe/: pipe_helper.h  pipe_interface.h
cmake_pipe/src/: pipe_helper.cpp  pipe_interface.cpp
lib_pipe/: 目录说明.txt
lib_pipe/Debug/: demo_create.lib  lib_pipe.lib  main.lib
lib_pipe/demo_create/: ReadMe.txt  demo_create.vcxproj
lib_pipe/lib_pipe/: lib_pipe.vcxproj  lib_pipe.vcxproj.filters  pipe_helper.cpp  pipe_interface.cpp  pipe_interface.h  stdafx.cpp
lib_pipe/main/: main.cpp  main.vcxproj
